# practice-atcoder

./: README.md  README.rst  pyproject.toml
practice_atcoder/: sample.py
practice_atcoder/abs/: card_game_for_two.py  coins.py  daydream.py  kagami_mochi.py  otoshidama.py  placing_marbles.py  product.py  shift_only.py  some_sums.py  traveling.py  welcome_to_atcoder.py
practice_atcoder/book_algorithm_solution/chapter3/: sum_of_three_integers.py  takusannosuusiki.py
practice_atcoder/book_algorithm_solution/chapter4/: sevenfivefive.py
practice_atcoder/book_algorithm_solution/chapter5/: contest.py  vacation.py
practice_atcoder/other/: chokudai.py
src/: star.py
tests/: test_name.py  test_practice_atcoder.py  test_sample.py
tests/abs/: test_card_game_for_two.py  test_coins.py  test_daydream.py  test_kagami_mochi.py  test_otoshidama.csv  test_otoshidama.py  test_placing_marbles.py  test_product.py  test_shift_only.py  test_some_sums.py  test_traveling.py  test_welcome_to_atcoder.py
tests/book_algorithm_solution/chapter3/: test_sum_of_three_integers.py  test_takusannosuusiki.py
tests/book_algorithm_solution/chapter4/: test_sevenfivefive.py
tests/book_algorithm_solution/chapter5/: test_contest.py  test_frog1.py  (+1 more)
tests/other/: test_chokudai.py
tests/typical_ninety/: test_no01code.py  test_no02code.py  test_no03code.py  test_no04code.py  test_no05code.py  test_no06code.py  test_no07code.py  test_no08code.py  test_no09code.py  test_no10code.py  test_no11code.py  test_no12code.py  test_no13code.py  test_no14code.py  test_no15code.py  test_no16code.py
